# giftlink

./: .dockerignore  .gitignore  Dockerfile  alembic.ini.example  docker-compose.yaml  entrypoint.sh  mkdocs.yml  pyproject.toml
app/: main.py
app/adapters/api/v1/dtos/: group_dto.py  people_dto.py
app/adapters/api/v1/routes/: group_route.py  people_route.py
app/adapters/data/orm/config/: base.py  db_config.py
app/adapters/log/: audit_logger.py
app/domain/models/: group.py  people.py
app/domain/ports/: draw_repository.py  group_repository.py  people_repository.py
app/domain/use_cases/: group_use_case.py  people_use_case.py
app/infrastructure/envs/: config.py
app/infrastructure/orm/config/: db_config.py
app/infrastructure/orm/migrations/: migrations.py
app/tests/: conftest.py
app/tests/test_repositories/: test_group_repository.py
app/tests/test_use_cases/: test_group_use_case.py
docs/: config.md  index.md  specification.md
src/: main.py
src/adapters/output/log/: audit_logger.py
src/adapters/output/smtp/: email.py
src/application/services/: auth_service.py  keys_service.py  password_service.py
src/application/use_cases/: group_use_case.py  key_use_case.py  people_use_case.py
src/domain/models/: draw.py  group.py  keys.py  people.py  token.py  user_registration.py
src/domain/ports/: draw_repository.py  group_repository.py  key_user_repository.py  people_repository.py
src/infrastructure/envs/: config.py
src/infrastructure/orm/config/: db_config.py
src/infrastructure/orm/migrations/: migrations.py
tests/: conftest.py
(+32 files in other folders)
